# summarizer_agent

./: pyproject.toml
summarizer_agent/: run.py  schemas.py
summarizer_agent/configs/: deployment.json
